2004-01-05  Simon Josefsson  <jas@extundo.com>

	* pgg.texi (Caching passphrase): Fix PGG passphrase caching
	section.

	* sasl.texi: New file.
	* Makefile.in: Add sasl.texi.

2003-12-28  Simon Josefsson  <jas@extundo.com>

	* gnus.texi (Group Score Commands): Add W e.

2004-01-04  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Spam ELisp Package Configuration Examples): Markup fixes.

2004-01-03  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus.texi (Spam ELisp Package Sequence of Events): explain more
	about the sequence of events and what happens with read-only
	backends
	(Spam ELisp Package Global Variables): explain what happens with
	read-only backends
	(Spam ELisp Package Configuration Examples): added Reiner Steib
	and Ted Zlatanov's setups

2004-01-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* emacs-mime.texi (Display Customization): Add mm-enable-external.

2004-01-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.texi (Category Syntax):
	gnus-agent-cat-enable-undownloaded-faces.

2004-01-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.texi, gnus.texi, gnus-faq.texi: Update copyright.

	* gnus-faq.texi ([5.12]): Fix code example for FQDN in Message-Ids.

	* message.texi (Message Headers): Add message-header-synonyms.

	* gnus.texi (Other modes): New node.
	(Oort Gnus): Refer to the above in "Dired integration".

2004-01-02  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus.texi (Top): updated menu with new manual nodes
	(The problem of spam): more ranting
	(Anti-Spam Basics): "spammers are wise to [filtering on From:]"
	(SpamAssassin): mention spam.el
	(Hashcash): do not a sentence end proposition with
	(Filtering Spam Using The Spam ELisp Package): more and better
	explanation, took lots of information out into subsections
	(Spam ELisp Package Sequence of Events)
	(Spam ELisp Package Filtering of Incoming Mail)
	(Spam ELisp Package Global Variables): new or updated content all
	around
	(Spam ELisp Package Configuration Examples): promised new